<?xml version="1.0"?>
<package format="2">
    <name>planner</name>
    <version>0.0.0</version>
    <description>The planner package</description>

    <license>Apache-2.0</license>
    <author email="yuelin@mail.dlut.edu.cn">Yue Lin</author>
    <maintainer email="yuelin@mail.dlut.edu.cn">Yue Lin</maintainer>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>

    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <build_export_depend>geometry_msgs</build_export_depend>

    <exec_depend>rospy</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>

    <export></export>
</package>
